# credit-calculator

./: .gitignore  Makefile  README.md  pyproject.toml
credit_calculator/: credit_model.py  credit_simulation.py  main.py
tests/: test_credit_model.py
