[tool.poetry]
name = "credit-calculator"
version = "0.1.0"
description = "Calculate and visualize credit costs"
authors = ["Oliver Frendo <ofrendo@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9, <3.10"
pydantic = "^1.9.1"
pytest = "^7.1.2"
matplotlib = "^3.5.2"
pandas = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
